refactor for clarity and consistency
* refactor naming of all the things
* refactor labeling of all the things
* add basic testing

--- a/.init/hub1/Application-replacement_gitopsRepository.yaml
+++ b/.init/hub1/Application-replacement_gitopsRepository.yaml
@@ -3,7 +3,7 @@
 #
 # Source is assuming a resource with /data/gitopsRepository (e.g. ConfigMap)
 source:
-  name: gitops-configuration
+  name: gitops-repository-configuration
   fieldPath: .data.gitopsRepository
 targets:
   - select:
