--- a/bases/acm-policies/policy-manifests/cluster-management/validate-cluster-management-applications/K8sRequiredManifestSubset_infra-apps-healthy-and-synced.yaml
+++ b/bases/acm-policies/policy-manifests/cluster-management/validate-cluster-management-applications/K8sRequiredManifestSubset_infra-apps-healthy-and-synced.yaml
@@ -20,10 +20,10 @@ spec:
     # NOTE: this is a bit hacky, and brittle, but don't have another idea
     labelSelector:
       matchExpressions:
-        - key: gitops-application
-          operator: NotIn
-          values:
-          - acm-policies
+      - key: app.kubernetes.io/name
+        operator: NotIn
+        values:
+        - acm-policies
   parameters:
     manifest_subset:
       status:
