--- a/bases/gatekeeper/ConstraintTemplate_K8sRequiredManifestSubset.yaml
+++ b/bases/gatekeeper/ConstraintTemplate_K8sRequiredManifestSubset.yaml
@@ -3,6 +3,8 @@ apiVersion: templates.gatekeeper.sh/v1
 kind: ConstraintTemplate
 metadata:
   name: k8srequiredmanifestsubset
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   crd:
     spec:
