--- a/bases/openshift-gitops-operator/kustomization.yaml
+++ b/bases/openshift-gitops-operator/kustomization.yaml
@@ -8,8 +8,8 @@ labels:
 - includeSelectors: false
   pairs:
     app.kubernetes.io/name: openshift-gitops-operator
-    app.kubernetes.io/component: operator
-    app.kubernetes.io/part-of: gitops
+    app.kubernetes.io/component: cluster-management
+    app.kubernetes.io/part-of: platform-management
 
 helmCharts:
 - name: operators-installer
