--- a/clusters/hub1/kustomization.yaml
+++ b/clusters/hub1/kustomization.yaml
@@ -5,15 +5,15 @@ kind: Kustomization
 labels:
 - includeSelectors: false
   pairs:
-    app.kubernetes.io/name: cluster-hub1-applications
-    app.kubernetes.io/component: applications
-    app.kubernetes.io/part-of: gitops
+    app.kubernetes.io/name: cluster-hub1
+    app.kubernetes.io/component: cluster-management
+    app.kubernetes.io/part-of: platform-management
 
 namespace: openshift-gitops
 
 resources:
-# load gitops configuration (e.g. repository, revision)
-- overlays/gitops-configuration
+# load cluster gitops repository configuration (e.g. repository, revision)
+- overlays/cluster-gitops-repository-configuration
 
 # install applications
 - ApplicationSet_cluster-hub1.yaml
