--- a/.init/hub1/Application-replacement_gitopsRevision.yaml
+++ b/.init/hub1/Application-replacement_gitopsRevision.yaml
@@ -3,7 +3,7 @@
 #
 # Source is assuming a resource with /data/gitopsRevision (e.g. ConfigMap)
 source:
-  name: gitops-configuration
+  name: gitops-repository-configuration
   fieldPath: .data.gitopsRevision
 targets:
   - select:
