--- a/bases/cluster-gitops-repository-configuration/ConfigMap_gitops-repository-configuration.yaml
+++ b/bases/cluster-gitops-repository-configuration/ConfigMap_gitops-repository-configuration.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: gitops-configuration
+  name: gitops-repository-configuration
 data:
-  # NOTE: need to be camel case because go templating does not like snake case
+  # NOTE: key names need to be camel case because go template does not like snake case
   gitopsRepository: https://github.com/itewk/gitops-hub-and-spoke-template.git
   gitopsRevision: main
   gitopsCluster: 
