--- a/bases/cluster-gitops-repository-configuration/kustomization.yaml
+++ b/bases/cluster-gitops-repository-configuration/kustomization.yaml
@@ -2,12 +2,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: openshift-gitops
+
 labels:
 - includeSelectors: false
   pairs:
-    app.kubernetes.io/name: group-hub1
+    app.kubernetes.io/name: cluster-gitops-repository-configuration
     app.kubernetes.io/component: cluster-management
     app.kubernetes.io/part-of: platform-management
 
 resources:
-- ApplicationSet_group-hub.yaml
+- ConfigMap_gitops-repository-configuration.yaml
