--- a/clusters/hub1/overlays/cluster-gitops-repository-configuration/kustomization.yaml
+++ b/clusters/hub1/overlays/cluster-gitops-repository-configuration/kustomization.yaml
@@ -3,10 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ../../../../bases/gitops-configuration
+- ../../../../bases/cluster-gitops-repository-configuration
 
 # Patch gitops configuration for cluster specific configuration (e.g. repository, revision)
 patches:
 - target:
-    name: gitops-configuration
-  path: ConfigMap-patch_gitops-configuration.yaml
+    name: gitops-repository-configuration
+  path: ConfigMap-patch_gitops-repository-configuration.yaml
