more renaming for clarity

--- a/bases/acm-policies/policy-manifests/tenant-management/validate-tenant-applications/K8sRequiredManifestSubset_tenant-apps-healthy-and-synced.yaml
+++ b/bases/acm-policies/policy-manifests/tenant-management/validate-tenant-applications/K8sRequiredManifestSubset_tenant-apps-healthy-and-synced.yaml
@@ -10,6 +10,7 @@ spec:
       - argoproj.io
       kinds:
       - Application
+      - ApplicationSet
     excludedNamespaces:
     - openshift-gitops
   parameters:
