--- a/clusters/hub1/application-sets/ApplicationSet_cluster-specific.yaml
+++ b/clusters/hub1/application-sets/ApplicationSet_cluster-specific.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: cluster-hub1
+  name: cluster-specific
 spec:
   goTemplate: true
   goTemplateOptions: ["missingkey=error"]
