--- a/groups/hub/applications/acm-policies/kustomization.yaml
+++ b/groups/hub/applications/acm-policies/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 # NOTE: need to re-specify here, rather then inheriting from base, so ArgoCD ApplicationSet can read it so in Application template can specify the namespace and create it so that argo can give itself namespace admin
-namespace: acm-policies
+namespace: openshift-gitops-policies
 
 resources:
-- ../../../../bases/acm-policies
+- ../../../../bases/openshift-gitops-policies
