--- a/bases/gitops-repository-configuration/ConfigMap_cluster-gitops-repo-config.yaml
+++ b/bases/gitops-repository-configuration/ConfigMap_cluster-gitops-repo-config.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: cluster-gitops-repository-configuration
+  name: cluster-gitops-repo-config
 data:
-  # NOTE: key names need to be camel case because go template does not like snake case
+  # TODO
   gitopsRepository: https://github.com/itewk/gitops-hub-and-spoke-template.git
   gitopsRevision: main
-  gitopsCluster: 
+  #gitopsCluster: 
 immutable: false
