--- a/bases/openshift-gitops-policies/kustomization.yaml
+++ b/bases/openshift-gitops-policies/kustomization.yaml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: acm-policies
+namespace: openshift-gitops-policies
 
 labels:
 - includeSelectors: false
   pairs:
-    app.kubernetes.io/name: rhacm-policies
+    app.kubernetes.io/name: openshift-gitops-policies
     app.kubernetes.io/component: governance
     app.kubernetes.io/part-of: platform-management
 
