--- a/clusters/workload1/application-sets/ApplicationSets-replacement_gitopsRevision.yaml
+++ b/clusters/workload1/application-sets/ApplicationSets-replacement_gitopsRevision.yaml
@@ -9,8 +9,9 @@ targets:
 - select:
     group: argoproj.io
     version: v1alpha1
-    kind: Application
+    kind: ApplicationSet
   fieldPaths:
-  - spec.source.targetRevision
+  - spec.generators.*.git.revision
+  - spec.template.spec.source.targetRevision
   options:
     create: True
