yet another refactor
* refactor ApplicaitonSet creation to helm chart for DRY reasons
* console customizations - init add

--- a/groups/hub/application-sets/kustomization.yaml
+++ b/groups/hub/application-sets/kustomization.yaml
@@ -4,6 +4,10 @@ kind: Kustomization
 
 namespace: openshift-gitops
 
-resources:
 # install applications
-- ApplicationSet_group-hub.yaml
+helmGlobals:
+  chartHome: ../../../helm-charts
+helmCharts:
+- name: application-set
+  version: 1.0.0
+  valuesFile: values.yaml
