--- a/clusters/workload2/application-sets/kustomization.yaml
+++ b/clusters/workload2/application-sets/kustomization.yaml
@@ -8,9 +8,17 @@ resources:
 # load gitops repository configuration (e.g. repository, revision)
 - overlays/gitops-repository-configuration
 
-# install applications
-- ApplicationSet_cluster-specific.yaml
+# install group applications
 - ../../../groups/all
+- ../../../groups/production
+
+# install cluster specific applications
+helmGlobals:
+  chartHome: ../../../helm-charts
+helmCharts:
+- name: application-set
+  version: 1.0.0
+  valuesFile: values.yaml
 
 # Update ApplicationSets to use the gitops configuration
 replacements:
