--- a/clusters/workload1/kustomization.yaml
+++ b/clusters/workload1/kustomization.yaml
@@ -5,10 +5,11 @@ kind: Kustomization
 labels:
 - includeSelectors: false
   pairs:
-    app.kubernetes.io/name: cluster-workload1
-    app.kubernetes.io/component: cluster-management
     app.kubernetes.io/part-of: platform-management
 
 resources:
-# install applications
-- application-sets
+# deploy cluster gitops applications
+- cluster-management-gitops
+
+# deploy tenant gitops applications
+- tenant-management-gitops
