--- a/bases/openshift-gitops/kustomization.yaml
+++ b/bases/openshift-gitops/kustomization.yaml
@@ -13,6 +13,9 @@ labels:
 
 resources:
 - ArcoCD_openshift-gitops.yaml
+- AppProject_cluster-management.yaml
+- AppProject_tenant-management.yaml
+- AppProject_default.yaml
 - ClusterRoleBinding_openshift-gitops-acm-cluster-admin.yaml
 - ClusterRoleBinding_openshift-gitops-acm-clusterclaims-admin.yaml
 - ClusterRoleBinding_openshift-gitops-acm-multiclusterhubs-admin.yaml
