app sets - make explicate that auto sync is on by default for all app sets

--- a/clusters/workload1/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
+++ b/clusters/workload1/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
@@ -3,3 +3,4 @@ applicationSet:
   name: cluster-hub1
   generatorGitFilePath: clusters/workload1/applications/**/kustomization.yaml
   project: cluster-management
+  syncPolicyAutomated: true
