--- a/clusters/workload1/tenant-management-gitops/ApplicationSet_tenant-values.yaml
+++ b/clusters/workload1/tenant-management-gitops/ApplicationSet_tenant-values.yaml
@@ -3,3 +3,4 @@ applicationSet:
   name: tenants-workload1
   generatorGitFilePath: clusters/workload1/**
   project: tenant-management
+  syncPolicyAutomated: true
