--- a/clusters/workload2/tenant-management-gitops/ApplicationSet_tenant-values.yaml
+++ b/clusters/workload2/tenant-management-gitops/ApplicationSet_tenant-values.yaml
@@ -3,3 +3,4 @@ applicationSet:
   name: tenants-workload2
   generatorGitFilePath: clusters/workload2/**
   project: tenant-management
+  syncPolicyAutomated: true
