--- a/groups/all/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
+++ b/groups/all/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
@@ -3,3 +3,4 @@ applicationSet:
   name: group-all
   generatorGitFilePath: groups/all/applications/**/kustomization.yaml
   project: cluster-management
+  syncPolicyAutomated: true
