--- a/groups/development/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
+++ b/groups/development/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
@@ -3,3 +3,4 @@ applicationSet:
   name: group-development
   generatorGitFilePath: groups/development/applications/**/kustomization.yaml
   project: cluster-management
+  syncPolicyAutomated: true
