--- a/groups/production/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
+++ b/groups/production/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
@@ -3,3 +3,4 @@ applicationSet:
   name: group-production
   generatorGitFilePath: groups/production/applications/**/kustomization.yaml
   project: cluster-management
+  syncPolicyAutomated: true
