--- a/groups/hub/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
+++ b/groups/hub/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
@@ -3,3 +3,4 @@ applicationSet:
   name: group-hub
   generatorGitFilePath: groups/hub/applications/**/kustomization.yaml
   project: cluster-management
+  syncPolicyAutomated: true
