helm-carts/application-set - add option to prevent cascading deletion

--- a/clusters/hub1/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
+++ b/clusters/hub1/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
@@ -4,3 +4,4 @@ applicationSet:
   generatorGitFilePath: clusters/hub1/applications/**/kustomization.yaml
   project: cluster-management
   syncPolicyAutomated: true
+  preventCascadingDeletion: false
