--- a/clusters/workload1/tenant-management-gitops/ApplicationSet_tenant-values.yaml
+++ b/clusters/workload1/tenant-management-gitops/ApplicationSet_tenant-values.yaml
@@ -4,3 +4,4 @@ applicationSet:
   generatorGitFilePath: clusters/workload1/**
   project: tenant-management
   syncPolicyAutomated: true
+  preventCascadingDeletion: false
