--- a/groups/hub/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
+++ b/groups/hub/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
@@ -4,3 +4,4 @@ applicationSet:
   generatorGitFilePath: groups/hub/applications/**/kustomization.yaml
   project: cluster-management
   syncPolicyAutomated: true
+  preventCascadingDeletion: false
