--- a/groups/production/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
+++ b/groups/production/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
@@ -4,3 +4,4 @@ applicationSet:
   generatorGitFilePath: groups/production/applications/**/kustomization.yaml
   project: cluster-management
   syncPolicyAutomated: true
+  preventCascadingDeletion: false
