--- a/clusters/workload2/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
+++ b/clusters/workload2/cluster-management-gitops/ApplicationSet_cluster-specific-values.yaml
@@ -4,3 +4,4 @@ applicationSet:
   generatorGitFilePath: clusters/workload2/applications/**/kustomization.yaml
   project: cluster-management
   syncPolicyAutomated: true
+  preventCascadingDeletion: false
